--- a/frontend/src/app/shared/pages/details.page/details.page.html
+++ b/frontend/src/app/shared/pages/details.page/details.page.html
@@ -1,6 +1,6 @@
 <div id="details-page-container">
-    <app-menu-bar [multipleOptions]="true" />
-    <app-menu-col />
+    <app-menu-bar />
+    <app-menu-col [multipleOptions]="true" />
     <app-details-tab [tab_type]="'revenues'" />
     <app-details-tab [tab_type]="'expenses'" />
     <app-details-tab [tab_type]="'differences'" />
