[Front][Not functionnal] Style for the pages with both menu and surfaces

--- a/frontend/src/app/app.html
+++ b/frontend/src/app/app.html
@@ -1,1 +1,7 @@
-<router-outlet />
+<div id="app-container">
+    <app-menu-bar id="menu-bar" />
+    <app-menu-col id="menu-col" />
+    <div id="page">
+        <router-outlet id="router-outlet" />
+    </div>
+</div>
