--- a/frontend/src/app/shared/components/menu-bar/menu-bar.html
+++ b/frontend/src/app/shared/components/menu-bar/menu-bar.html
@@ -1,4 +1,4 @@
-<div id="menu-bar-container">
+<div class="surface" id="menu-bar-container">
     <div id="menu-bar-left">
         Bonjour,  
         {{ authService.getUser().pseudo }}
