--- a/frontend/src/app/shared/components/menu-bar/menu-bar.css
+++ b/frontend/src/app/shared/components/menu-bar/menu-bar.css
@@ -1,13 +1,8 @@
 #menu-bar-container {
-    width: calc(100% - 40px);
+    width: 100%;
     height: 52px;
-    padding: 20px;
-    margin: 20px;
 
     display: flex;
     justify-content: space-between;
     align-items: center;
-    
-    background-color: var(--surface-color);
-    border-radius: 6px;
 }
