--- a/frontend/src/app/shared/components/menu-bar/menu-bar.html
+++ b/frontend/src/app/shared/components/menu-bar/menu-bar.html
@@ -1,4 +1,7 @@
 <div class="surface" id="menu-bar-container">
+    <div>
+        <h1>COMPTES</h1>
+    </div>
     <div id="menu-bar-left">
         Bonjour,  
         {{ authService.getUser().pseudo }}
