--- a/frontend/src/app/summary/balance.component/balance.component.html
+++ b/frontend/src/app/summary/balance.component/balance.component.html
@@ -1,4 +1,5 @@
-<div id="balance-container">
+<div class="surface" id="balance-container">
+    <h3>SOLDE</h3>
     <p-knob 
         [ngModel]="summaryService.balance()"
         [min]="-abs()"
