--- a/frontend/src/app/transactions/trans-add-bar.component/trans-add-bar.component.html
+++ b/frontend/src/app/transactions/trans-add-bar.component/trans-add-bar.component.html
@@ -1,7 +1,11 @@
 <p-toast />
 
 <div id="transaction-add-bar">
-    <form [formGroup]="transactionAddForm" (ngSubmit)="addTransaction()">
+    <form
+        class="surface"
+        [formGroup]="transactionAddForm"
+        (ngSubmit)="addTransaction()"
+    >
         <p-floatLabel variant="on">
             <p-datepicker 
                 formControlName="event_date" 
