--- a/frontend/src/app/categories/category.component/category.component.css
+++ b/frontend/src/app/categories/category.component/category.component.css
@@ -1,6 +1,12 @@
+#category-container {
+    
+}
+
 #category-container ::ng-deep .p-card {
     width: 160px;
-    height: 74px;
+    height: 76px;
+
+    border-radius: 6px;
 }
 
 #category-container ::ng-deep .p-card-body {
@@ -31,13 +37,15 @@
 }
 
 #category-buttons {
+    margin-top: 0.5px;
+    
     display: flex;
     flex-direction: column;
 }
 
 #category-buttons :first-child ::ng-deep .p-button {
     border-top-left-radius: 0;
-    border-top-right-radius: 12px;
+    border-top-right-radius: 6px;
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
 }
@@ -46,11 +54,18 @@
     border-top-left-radius: 0;
     border-top-right-radius: 0;
     border-bottom-left-radius: 0;
-    border-bottom-right-radius: 12px;
+    border-bottom-right-radius: 6px;
 }
 
 #category-container form input {
     all: unset;
     width: 100%;
     height: 100%;
+}
+
+#category-container form {
+    min-height: 100%;
+
+    display: flex;
+    flex-direction: row;
 }
