--- a/frontend/src/theme.css
+++ b/frontend/src/theme.css
@@ -1,19 +1,21 @@
 :root {
 
     --primary-color: rgb(0, 247, 255);
+    --primary-color-darker: rgb(0, 187, 190);
     --secondary-color: rgb(0, 94, 122);
     --accent-color: rgb(6, 192, 0);
 
     --black-color: rgb(0, 0, 0);
 
-    --grey1-color: rgb(17, 17, 17);
-    --grey2-color: rgb(92, 92, 92);
+    --grey1-color: rgb(23, 23, 23);
+    --grey2-color: rgb(109, 109, 109);
     --grey3-color: rgb(185, 185, 185);
 
     --white-color: rgb(255, 255, 255);
 
     --background-color: var(--black-color);
     --surface-color: var(--grey1-color);
+    --surface-title-color: var(--grey2-color);
 
     --p-button-primary-background: var(--primary-color) !important;
     --p-button-primary-border-color: var(--primary-color) !important;
