[Front][Tested-] First style for the whole app and only computer

--- a/frontend/src/app/app.html
+++ b/frontend/src/app/app.html
@@ -1,6 +1,8 @@
 <div id="app-container">
-    <app-menu-bar id="menu-bar" />
-    <app-menu-col id="menu-col" />
+    @if (authService.authenticated()) {
+        <app-menu-bar id="menu-bar" />
+        <app-menu-col id="menu-col" [multipleOptions]="optionsService.multiple()" />
+    }
     <div id="page">
         <router-outlet id="router-outlet" />
     </div>
