--- a/frontend/src/app/details/details-tab/details-tab.html
+++ b/frontend/src/app/details/details-tab/details-tab.html
@@ -1,4 +1,4 @@
-<div class="surface" id="details-tab-container">
+<div id="details-tab-container">
     @let d = details();
     @if (d) {
         @let detailsTab = d[0];
