--- a/frontend/src/app/transactions/trans-add-bar.component/trans-add-bar.component.html
+++ b/frontend/src/app/transactions/trans-add-bar.component/trans-add-bar.component.html
@@ -16,6 +16,7 @@
                 [showIcon]="true"
                 [minDate]="minDate()"
                 [maxDate]="maxDate()"
+                appendTo="body"
             />
             <label for="event_date">Date</label>
         </p-floatLabel>
@@ -54,6 +55,7 @@
                 [showIcon]="true"
                 [minDate]="minDate()"
                 [maxDate]="maxDate()"
+                appendTo="body"
             />
             <label for="bank_date">Date en banque</label>
         </p-floatLabel>
