--- a/frontend/src/app/shared/pages/details.page/details.page.css
+++ b/frontend/src/app/shared/pages/details.page/details.page.css
@@ -1,4 +1,16 @@
 #details-page-container {
     height: 100%;
+    min-height: 0;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+
     overflow: hidden;
+}
+
+#details-page-container .details-tab {
+    height: 100%;
+    padding-bottom: 20px;
 }
