--- a/frontend/src/app/details/details-tab/details-tab.css
+++ b/frontend/src/app/details/details-tab/details-tab.css
@@ -1,4 +1,5 @@
 #details-tab-container {
+    width: 100%;
     height: 100%;
     min-height: 0;
 
@@ -15,7 +16,15 @@
     justify-self: center;
     margin: 0;
 }
-  
+
+#details-tab-container ::ng-deep .p-treetable {
+    font-size: 0.75rem;
+}
+
+#details-tab-container ::ng-deep .p-treetable table th {
+    width: 85px;
+}
+
 #details-tab-container ::ng-deep .p-treetable table th:first-child {
     width: 200px;
 }
