--- a/frontend/src/app/shared/pages/details.page/details.page.css
+++ b/frontend/src/app/shared/pages/details.page/details.page.css
@@ -1,4 +1,5 @@
 #details-page-container {
+    width: 100%;
     height: 100%;
     min-height: 0;
 
@@ -11,6 +12,7 @@
 }
 
 #details-page-container .details-tab {
+    width: 100%;
     height: 100%;
     padding-bottom: 20px;
 }
